--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,7 @@
 body
 {
-
+    background: #1e1f24;
     color: #333;
-
     text-align: center;
     font-family: Arial;
     font-size: 16px;
@@ -18,17 +17,23 @@ body
 }
 #cabecera
 {
-    background: #33a;
+    background: #37488b;
     box-shadow: 0 2px 20px 0 rgb(0,0,0,.5);
     color: #fff;
     font-weight: 700;
     margin: 0;
     padding: .5em;
 }
+#cabecera#logo
+{
+    width: 20px;
+    vertical-align: middle;
+
+}
 #container
 {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #ddd;
     margin: 0 auto;
@@ -36,4 +41,9 @@ body
 #container h1
 {
     font-size: 20px;
+}
+#post
+{
+    background: white;
+    padding: 1em;
 }
